--- a/Qfront/src/Pages/Cart/cart-styles.scss
+++ b/Qfront/src/Pages/Cart/cart-styles.scss
@@ -1,6 +1,7 @@
 .cart-page {
   height: auto;
   padding: 60px;
+  background-color: #f5f5f5;
 
   h1 {
     font-size: 1.3rem;
@@ -17,8 +18,7 @@
 
   .cart-arrange {
     img {
-      height: 100px;
-      margin: 20px;
+      height: 60px;
     }
     h2 {
       font-size: medium;
