👌🏽 Few UX Enhancements
Created a private route for checkout (only accessible when there is a product in the cart).

Enhanced shooping page product card

--- a/Qfront/src/components/Header/header-styles.scss
+++ b/Qfront/src/components/Header/header-styles.scss
@@ -7,6 +7,12 @@ header {
     background-color: var(--main);
   }
 
+  // .checkout-bar {
+  //   background: transparent
+  //     linear-gradient(180deg, #1486ce 0%, #0b79bf 50%, #1486ce 100%) 0% 0%
+  //     no-repeat padding-box;
+  // }
+
   #top-bar {
     position: relative;
 
