--- a/Qfront/src/main-styles.css
+++ b/Qfront/src/main-styles.css
@@ -13,7 +13,7 @@ body {
 :root {
   overflow-x: hidden !important;
   font-size: 14px;
-  --button: transparent linear-gradient(180deg, #ffbc0a 0%, #f3ba1d 100%) 0% 0%
+  --button: transparent linear-gradient(180deg, #fca311 0%, #fca311 100%) 0% 0%
     no-repeat padding-box;
   --buttonborder: #a88734 #9c7e31 #846a29;
   --buttonhover: transparent linear-gradient(180deg, #f3ba1d 0%, #ffbc0a 100%)
@@ -22,10 +22,11 @@ body {
     0% 0% no-repeat padding-box;
   --natural: #e7e9ec;
   /* --main: #0b79bf; */
-  --main: #024af8;
-  --passive: transparent linear-gradient(180deg, #0b79bf 0%, #3678a2 100%) 0% 0%
+  --main: #0147be;
+  /* --main: #024af8; */
+  --passive: transparent linear-gradient(180deg, #0147be 0%, #0147be 100%) 0% 0%
     no-repeat padding-box;
-  --passivehover: transparent linear-gradient(180deg, #3678a2 0%, #0b79bf 100%)
+  --passivehover: transparent linear-gradient(180deg, #0a5ff1 0%, #0147be 100%)
     0% 0% no-repeat padding-box;
   --border: 1px solid #9d9d9d56;
   --shadow: 0 0.46875rem 2.1875rem rgba(4, 9, 20, 0.03),
