👌 Shop page links
Shop page results link to the product pages.

--- a/Qfront/src/main-styles.css
+++ b/Qfront/src/main-styles.css
@@ -37,6 +37,10 @@ body {
   margin: 0;
 }
 
+a {
+  color: var(--main) !important;
+}
+
 .btn.btn-action {
   background: var(--button);
   width: 100%;
