--- a/Qfront/src/main-styles.css
+++ b/Qfront/src/main-styles.css
@@ -45,6 +45,19 @@ ul {
   list-style: none;
 }
 
+/* Remove arrows from input type number */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 .btn.btn-action {
   background: var(--button);
   width: 100%;
